<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentations.screens.frame3.Fragment_frame_3">



    <Button
        android:id="@+id/button1_frame_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button2_frame_3"/>

    <Button
        android:id="@+id/button2_frame_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_questions"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1_frame_3"
        app:layout_constraintBottom_toTopOf="@id/button3_frame_3"/>

    <Button
        android:id="@+id/button3_frame_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval_memories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2_frame_3" />
</androidx.constraintlayout.widget.ConstraintLayout>